Fix Explore/search tile overflow when avatars don't load

--- a/src/components/grid/grid.scss
+++ b/src/components/grid/grid.scss
@@ -43,6 +43,8 @@
                     border-radius: 4px;
                     width: 32px;
                     height: 32px;
+                    display: block;
+                    overflow: hidden;
                 }
             }
 
